syntax = "proto3";

message PB {
  enum GameBoardType {
    LUXOR = 0;
    TOWER = 1;
    AMERICAN = 2;
    FESTIVAL = 3;
    WORLDWIDE = 4;
    CONTINENTAL = 5;
    IMPERIAL = 6;
    NOTHING = 7;
    NOTHING_YET = 8;
    CANT_PLAY_EVER = 9;
    I_HAVE_THIS = 10;
    WILL_PUT_LONELY_TILE_DOWN = 11;
    HAVE_NEIGHBORING_TILE_TOO = 12;
    WILL_FORM_NEW_CHAIN = 13;
    WILL_MERGE_CHAINS = 14;
    CANT_PLAY_NOW = 15;
    MAX = 16;
  }

  enum GameMode {
    UNKNOWN = 0; // not used, here because the first enum value must be zero in proto3
    SINGLES_1 = 1;
    SINGLES_2 = 2;
    SINGLES_3 = 3;
    SINGLES_4 = 4;
    SINGLES_5 = 5;
    SINGLES_6 = 6;
    TEAMS_2_VS_2 = 7;
    TEAMS_2_VS_2_VS_2 = 8;
    TEAMS_3_VS_3 = 9;
  }

  enum PlayerArrangementMode {
    VERSION_1 = 0;
    RANDOM_ORDER = 1;
    EXACT_ORDER = 2;
    SPECIFY_TEAMS = 3;
  }

  message GameSetup {
    message Position {
      int32 user_id = 1;
      bool is_host = 2;
      bool approves_of_game_setup = 3;
    }

    int32 game_id = 1;
    int32 game_display_number = 2;
    GameMode game_mode = 4;
    PlayerArrangementMode player_arrangement_mode = 5;
    repeated Position positions = 6;
    repeated int32 game_board = 7;
  }

  message GameState {
    message RevealedTileRackTile {
      int32 tile = 1;
      int32 player_id_belongs_to = 2;
    }

    GameAction game_action = 1;
    int64 timestamp = 2 [ jstype = JS_NUMBER ];
    repeated RevealedTileRackTile revealed_tile_rack_tiles = 3;
    repeated int32 revealed_tile_bag_tiles = 4;
    int32 player_id_with_playable_tile_plus_one = 5; // 1 more than actual player_id
  }

  message GameSetupAction {
    message JoinGame {
    }

    message UnjoinGame {
    }

    message ApproveOfGameSetup {
    }

    message ChangeGameMode {
      GameMode game_mode = 1;
    }

    message ChangePlayerArrangementMode {
      PlayerArrangementMode player_arrangement_mode = 1;
    }

    message SwapPositions {
      int32 position1 = 1;
      int32 position2 = 2;
    }

    message KickUser {
      int32 user_id = 1;
    }

    JoinGame join_game = 1;
    UnjoinGame unjoin_game = 2;
    ApproveOfGameSetup approve_of_game_setup = 3;
    ChangeGameMode change_game_mode = 4;
    ChangePlayerArrangementMode change_player_arrangement_mode = 5;
    SwapPositions swap_positions = 6;
    KickUser kick_user = 7;
  }

  message GameSetupChange {
    message UserAdded {
      int32 user_id = 1;
    }

    message UserRemoved {
      int32 user_id = 1;
    }

    message UserApprovedOfGameSetup {
      int32 user_id = 1;
      bool approved_by_everybody = 2;
      repeated int32 final_user_ids = 3;
    }

    message GameModeChanged {
      GameMode game_mode = 1;
    }

    message PlayerArrangementModeChanged {
      PlayerArrangementMode player_arrangement_mode = 1;
    }

    message PositionsSwapped {
      int32 position1 = 1;
      int32 position2 = 2;
    }

    message UserKicked {
      int32 user_id = 1;
    }

    UserAdded user_added = 1;
    UserRemoved user_removed = 2;
    UserApprovedOfGameSetup user_approved_of_game_setup = 3;
    GameModeChanged game_mode_changed = 4;
    PlayerArrangementModeChanged player_arrangement_mode_changed = 5;
    PositionsSwapped positions_swapped = 6;
    UserKicked user_kicked = 7;
  }

  message GameAction {
    message StartGame {
    }

    message PlayTile {
      int32 tile = 1;
    }

    message SelectNewChain {
      GameBoardType chain = 1;
    }

    message SelectMergerSurvivor {
      GameBoardType chain = 1;
    }

    message SelectChainToDisposeOfNext {
      GameBoardType chain = 1;
    }

    message DisposeOfShares {
      int32 trade_amount = 1;
      int32 sell_amount = 2;
    }

    message PurchaseShares {
      repeated GameBoardType chains = 1;
      bool end_game = 2;
    }

    message GameOver {
    }

    StartGame start_game = 1;
    PlayTile play_tile = 2;
    SelectNewChain select_new_chain = 3;
    SelectMergerSurvivor select_merger_survivor = 4;
    SelectChainToDisposeOfNext select_chain_to_dispose_of_next = 5;
    DisposeOfShares dispose_of_shares = 6;
    PurchaseShares purchase_shares = 7;
    GameOver game_over = 8;
  }

  message MessageToServer {
    message LoginLogout {
      message LoginWithPassword {
        string username = 1;
        string password = 2;
      }

      message LoginWithToken {
        string username = 1;
        string token = 2;
      }

      message CreateUserAndLogin {
        string username = 1;
        string password = 2;
      }

      message Logout {
      }

      LoginWithPassword login_with_password = 1;
      LoginWithToken login_with_token = 2;
      CreateUserAndLogin create_user_and_login = 3;
      Logout logout = 4;
    }

    message Lobby {
      message Connect {
        int32 last_event_index = 1;
      }

      message CreateGame {
        GameMode game_mode = 1;
      }

      Connect connect = 1;
      CreateGame create_game = 2;
    }

    LoginLogout login_logout = 1;
    Lobby lobby = 2;
  }

  message MessageToClient {
    message Initial {
      int32 version = 1;
      int32 log_time = 2;
    }

    message LoginLogout {
      enum ResponseCode {
        SUCCESS = 0;
        GENERIC_ERROR = 1;
        USER_NOT_FOUND = 2;
        INCORRECT_PASSWORD = 3;
        INVALID_TOKEN = 4;
        INVALID_USERNAME = 5;
        INVALID_PASSWORD = 6;
        USER_EXISTS = 7;
      }

      ResponseCode response_code = 1;
      string username = 2;
      int32 user_id = 3;
      string token = 4;
    }

    message Lobby {
      message LastStateCheckpoint {
        message User {
          int32 user_id = 1;
          string username = 2;
          bool is_in_lobby = 3;
        }

        repeated User users = 2;
        int32 last_event_index = 3;
      }

      message Event {
        message GameCreated {
          int32 game_number = 1;
          int32 game_display_number = 2;
          GameMode game_mode = 3;
          int32 host_user_id = 4;
        }

        message AddUserToLobby {
          int32 user_id = 1;
          string username = 2;
        }

        message RemoveUserFromLobby {
          int32 user_id = 1;
        }

        GameCreated game_created = 1;
        AddUserToLobby add_user_to_lobby = 6;
        RemoveUserFromLobby remove_user_from_lobby = 7;
      }

      message CreateGameResponse {
        int32 game_number = 1;
      }

      LastStateCheckpoint last_state_checkpoint = 1;
      repeated Event events = 2;
      CreateGameResponse create_game_response = 3;
    }

    Initial initial = 15;
    LoginLogout login_logout = 1;
    Lobby lobby = 2;
  }

  message GameReview {
    GameMode game_mode = 1;
    PlayerArrangementMode player_arrangement_mode = 2;
    repeated int32 user_ids = 3;
    repeated string usernames = 4;
    int32 host_user_id = 5;
    repeated int32 tile_bag = 6;
    repeated GameAction game_actions = 7;
    int64 begin_timestamp = 8 [ jstype = JS_NUMBER ];
    repeated int64 game_action_timestamp_offsets = 9 [ jstype = JS_NUMBER ];
    int64 end_timestamp = 10 [ jstype = JS_NUMBER ];
  }
}
